fixed white space issue and bottom and resized sidebar

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 * {
-    margin: 0;
-    padding: 0;
     font-family: 'Mukta', sans-serif;
     font-size: 30px;
     color: white;
+    margin: 0;
 }
 
 .container {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: minmax(200px, 1fr) 4fr;
     grid-auto-rows: auto;
@@ -26,14 +26,20 @@ header {
 .sidebar {
     background-color: #5DADE2;
     grid-row: 1 / 3;
-    display: grid;
-    grid-template-rows: 1fr 5fr 2fr;
     padding-left: 20px;
+}
+
+.sidebar-top {
+    margin-bottom: 25px;
+}
+
+.sidebar-middle {
+    margin-bottom: 35px;
 }
 
 .sidebar a {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
     margin-left: 10px;
 }
 
@@ -53,6 +59,7 @@ header {
     gap: 20px; */
 }
 
-
-
-
+header {
+    display: flex;
+    flex-direction: column;
+}
